fix contrast errors

--- a/nustyle.css
+++ b/nustyle.css
@@ -136,7 +136,7 @@ header {
 }
 
 .main-project button {
-  background-color: #ff7b00a8;
+  background-color: #a03f07;
   width: 124px;
   height: 48px;
   border: none;
@@ -202,7 +202,7 @@ header {
 }
 
 .other-projects button {
-  background-color: #ff7b00a8;
+  background-color: #a03f07;
   width: 100%;
   height: 48px;
   border: none;
@@ -245,7 +245,7 @@ header {
 }
 
 .about-me button {
-  background-color: #ff7b00a8;
+  background-color: #a03f07;
   width: 161px;
   height: 48px;
   border: none;
@@ -262,14 +262,14 @@ header {
 
 .main-project button:hover {
   background-color: #f8f5f4;
-  border: 1px solid #f55800;
-  color: #f55800;
+  border: 1px solid #a03f07;
+  color: #a03f07;
 }
 
 .other-projects button:hover {
   background-color: #f8f5f4;
-  border: 1px solid #f55800;
-  color: #f55800;
+  border: 1px solid #a03f07;
+  color: #a03f07;
 }
 
 .about-me button:hover {
@@ -364,7 +364,7 @@ header {
   padding: 12px;
   width: 131px;
   height: 48px;
-  background: #ff7b00a8;
+  background: #a03f07;
   margin: 24px 122px;
   border: none;
   font-family: 'Inter';
@@ -401,8 +401,8 @@ ul.icons2 {
 
 #form-button:hover {
   background-color: #f8f5f4;
-  border: 1px solid #f55800;
-  color: #f55800;
+  border: 1px solid #a03f07;
+  color: #a03f07;
 }
 
 #footer-hr {
